@@ -356,13 +356,10 @@ static struct {
 	{"Canon:Powershot S60 (PTP mode)",      0x04a9, 0x30b2},
 	{"Canon:Digital IXUS 500 (PTP mode)",   0x04a9, 0x30b4},
 	{"Canon:PowerShot S500 (PTP mode)",     0x04a9, 0x30b4},
-
 	{"Canon:PowerShot A75 (PTP mode)",      0x04a9, 0x30b5},
-
 	{"Canon:PowerShot SD110 (PTP mode)",    0x04a9, 0x30b6},
-
 	{"Canon:PowerShot A310 (PTP mode)",     0x04a9, 0x30b8},
-
+	{"Canon:PowerShot A85 (PTP mode)",      0x04a9, 0x30be},
 	{"Canon:Digital IXUS 430 (PTP mode)",   0x04a9, 0x30ba},
  	{"Canon:PowerShot S410 (PTP mode)",     0x04a9, 0x30ba},
  	{"Canon:EOS 1D Mark II (PTP mode)",     0x04a9, 0x30ea},
